--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,5 +10,19 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+- task: SonarSource.sonarqube.15B84CA1-B62F-4A2A-A403-89B77A063157.SonarQubePrepare@4
+  displayName: 'Prepare analysis on SonarQube'
+  inputs:
+    SonarQube: 'SonarCloud'
+    projectKey: $(SonarcloudKey)
+    projectName: MigrationPlayground
+    projectVersion: '$(AssemblyVersion)'
+    extraProperties: |
+     sonar.organization=skandia
+     sonar.branch.name=$(Build.SourceBranchName)
+     
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
+ 
+- task: SonarSource.sonarqube.6D01813A-9589-4B15-8491-8164AEB38055.SonarQubeAnalyze@4
+  displayName: 'Run Code Analysis'
