Added Copy files task
Added Copy files task to copy files to artifact staging directory

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,6 +28,12 @@ steps:
 #- task: SonarSource.sonarcloud.ce096e50-6155-4de8-8800-4221aaeed4a1.SonarCloudAnalyze@1
 #  displayName: 'Run Code Analysis'
 
+- task: CopyFiles@2
+  displayName: 'Copy Files to: $(build.artifactstagingdirectory)'
+  inputs:
+    SourceFolder: '$(Build.SourcesDirectory)'
+    TargetFolder: '$(build.artifactstagingdirectory)'
+
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact'
   inputs:
