--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ steps:
   displayName: 'dotnet build $(buildConfiguration)'
   
 #- script: dotnet test --configuration $(buildConfiguration)
-"  displayName: 'dotnet test $(buildConfiguration)'
+#  displayName: 'dotnet test $(buildConfiguration)'
  
 - task: SonarSource.sonarcloud.ce096e50-6155-4de8-8800-4221aaeed4a1.SonarCloudAnalyze@1
   displayName: 'Run Code Analysis'
