--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ steps:
 - task: SonarSource.sonarcloud.14d9cde6-c1da-4d55-aa01-2965cd301255.SonarCloudPrepare@1
   displayName: 'Prepare analysis on SonarCloud'
   inputs:
-    SonarQube: 'Skandia-SonarCloud'
+    SonarCloud: 'Skandia-SonarCloud'
     projectKey: $(SonarcloudKey)
     projectName: MigrationPlayground
     projectVersion: '$(AssemblyVersion)'
